[package]
name = "codetour_export_to_md"
version = "0.1.0"
authors = ["Luciano <luciano.bestia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.0"
glob = "0.3.0"
regex = "1.3.6"
lazy_static="1.4.0"
serde ="1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0"

