[package]
name = "codetour_export_to_md"
version = "0.1.24"
authors = ["Luciano <luciano.bestia@gmail.com>"]
edition = "2018"
description = "Export CodeTour file to md"
repository = "https://github.com/LucianoBestia/codetour_export_to_md"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["development-tools::build-utils"]

# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]


[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.1"
glob = "0.3.0"
regex = "1.3.7"
lazy_static="1.4.0"
serde ="1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0"

